# MaracaAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
maracaai/: main.py
