[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maracaai"
version = "0.1.1"
description = "AI voice chatbot using Hack Club AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["openrouter", "SpeechRecognition", "pyttsx3", "python-dotenv"]

[project.urls]
Repository = "https://github.com/hippogriff101/MaracaAI"

[project.scripts]
maraca = "maracaai.main:main"